# Monypolo_2

./: .gitignore  README.md
client/: Cargo.toml
client/src/: board.rs  communication.rs  game_state.rs  main.rs  tools.rs
client/src/helpers/: camera.rs
client/src/screens/: board.rs  menu.rs  mod.rs
client/src/ui/: buttons.rs  mod.rs  money.rs  name.rs  toast.rs
server/: Cargo.toml
server/src/: action.rs  communication.rs  game_state.rs  main.rs  server_state.rs
server/src/test/: action_tests.rs  communication_tests.rs  game_state_tests.rs  mod.rs  server_state_tests.rs
shared/: Cargo.toml
shared/src/: action.rs  board.rs  lib.rs  list_const.rs
shared/src/maps/: map1.rs  map_go.rs  map_jail.rs  mod.rs
