[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
shared = { path = "../shared" }
uuid = { version = "1.11.0", features = ["v4"] }
bevy = "0.15.0"
async-channel = "2.3.1"
bevy-inspector-egui = "0.28.0"
bevy_simple_text_input = "0.10.1"
log = "0.4.27"
